<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="DriveState_DataModel" Id="{c41a2f43-6bdf-4c6f-ba64-ccc93a7fb1e7}">
    <Declaration><![CDATA[TYPE DriveState_DataModel :
STRUCT
	StartingState 	: STRING(20) := 'Starting';
	RunningState	: STRING(20) := 'Running';
	StoppingState	: STRING(20) := 'Stopping';
	StoppedState	: STRING(20) := 'Stopped';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>