<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="VibAccelarationDataModel" Id="{dbf86cab-a223-49a6-a589-c0a205315dd8}">
    <Declaration><![CDATA[
TYPE VibAccelarationDataModel :
STRUCT
	LineName			: STRING(40);
	MachineName			: STRING(40);
	SensorName			: STRING(40);
		
	VibAccelTotRmsX		: REAL;
    VibAccelTotRmsY		: REAL;
    VibAccelTotRmsZ		: REAL;

    SensorTemperature	: REAL;
	
	TimeStamp 			: ULINT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>